...
                <MaterialBottomTabs.Screen
                    name="(home)"
                    options={{
                        tabBarLabel: "Home",
                        tabBarIcon: ({ focused, color }: any) => (
                            <MaterialCommunityIcons
                                testID="HomeTabIcon"
                                name={focused ? "home" : "home-outline"}
                                size={IconSizes.md}
                                color={color}
                            />
                        ),
                    }}
                />
                <MaterialBottomTabs.Screen
                    name="playlists"
                    options={{
                        tabBarLabel: "Playlists",
                        tabBarIcon: ({ focused, color }: any) => (
                            <MaterialCommunityIcons
                                testID="PlaylistsTabIcon"
                                name={
                                    focused
                                        ? "playlist-music"
                                        : "playlist-music-outline"
                                }
                                size={IconSizes.md}
...
