...
                    iconColor={Colors.primary}
                    style={{ marginHorizontal: -Spacing.mmd }}
                />
                <IconButton
                    testID={
                        playbackState.state === "playing"
                            ? "pause-button"
                            : "play-button"
                    }
                    onPress={hanldePlayPausePress}
                    icon={
                        playbackState.state === "playing"
                            ? "pause-circle"
                            : "play-circle"
                    }
                    size={IconSizes.xxl}
                    iconColor={Colors.primary}
                    style={{ marginHorizontal: -Spacing.mmd }}
                />
                <IconButton
                    testID="next-button"
                    onPress={() => {
                        next();
                        animation(Direction.LEFT, true);
                    }}
                    icon={"skip-next"}
                    size={IconSizes.xl}
...
