appId: com.anonymous.Flora
---
- tapOn: "Flora"
- assertVisible: "Flora"
- assertVisible:
      id: "search-button"
- tapOn:
      id: "search-button"
- assertVisible: "Search All"
- tapOn: "Search..."
- inputText: "Desire"
- assertVisible: "Burning Desires, Sān-Z, HOYO-MiX • 2024"
- assertVisible: "1 album"
- assertVisible: "1 song"
- tapOn: "Songs"
- assertNotVisible: "1 album"
- assertVisible: "1 song"
- tapOn: "Albums"
- assertVisible: "1 album"
- assertNotVisible: "1 song"
- tapOn: "Playlists"
- assertVisible: "No results"
- tapOn: "Artists"
- assertVisible: "No results"
- tapOn: "Year"
- assertVisible: "No results"
- tapOn: "Desire"
- "eraseText"
- inputText: "2024"
- assertVisible: "3 albums"
- assertVisible: "3 songs"
